# SBM_CommunityDetection

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  main.cpp
config/: default.json
include/ACD/: approximate_community_detection.h
include/DCD/: dynamic_community_detection.h
include/IP_Solver/: ip_solver.h
include/StreamBP/: belief_propagation.h
lib/: belief_propagation.cpp  belief_propagation.h  color_map.h  defaults.h  dynamic_community_detection.cpp  dynamic_community_detection.h  graph.cpp  graph.h  sbm.cpp  sbm.h
scripts/: overall_run.cpp  overall_run.h  self_run.cpp  self_run.h
src/: approximate_community_detection.cpp  belief_propagation.cpp  dynamic_community_detection.cpp  graph.cpp  graph.h  ip_solver.cpp  main.cpp  sbm.cpp  sbm.h  test_script.cpp  test_script.h
test_data/20_20_2_2_10_90/: edges.txt  labels.txt
test_data/20_20_2_2_25_75/: edges.txt  labels.txt
test_data/20_20_5_2_10_90/: edges.txt  labels.txt
test_data/20_20_5_2_25_75/: edges.txt  labels.txt
test_data/20_40_2_2_10_90/: edges.txt  labels.txt
test_data/20_40_2_2_25_75/: edges.txt  labels.txt
test_data/20_40_5_2_10_90/: edges.txt  labels.txt
test_data/20_40_5_2_25_75/: edges.txt  labels.txt
test_data/20_60_2_2_10_90/: edges.txt  labels.txt
test_data/20_60_2_2_25_75/: edges.txt  labels.txt
test_data/20_60_5_2_10_90/: edges.txt  labels.txt
test_data/20_60_5_2_25_75/: edges.txt  labels.txt
test_data/20_80_2_2_10_90/: edges.txt  labels.txt
test_data/20_80_2_2_25_75/: edges.txt  labels.txt
test_data/20_80_5_2_10_90/: edges.txt  labels.txt
test_data/20_80_5_2_25_75/: edges.txt  labels.txt
tests/: cit-HepTh.txt  new_edges.txt  test_algorithms.cpp
utils/: heap_and_map.cpp  heap_and_map.h  hungarian_algorithm.cpp  hungarian_algorithm.h  quality_measures.cpp  quality_measures.h  sequence_generator.cpp  sequence_generator.h  utilities.cpp  utilities.h
